# tg-crypto-news

./: .gitignore  CHANGELOG.md  PRD.md  README.md  bot.py  config.yaml  env.example  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: daily-message.yml
aave/: __init__.py  aave_client.py  enums.py  exceptions.py  models.py  utils.py
bot/: __init__.py  config.py  core.py  exceptions.py  message_builder.py  telegram_client.py
examples/: aave_features_demo.py
tests/: __init__.py  test_aave_client.py  test_bot_core.py
